--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     // --- KONFIGURASI FIREBASE ANDA DI SINI ---
     // GANTI DENGAN CONFIG DARI FIREBASE CONSOLE ANDA
     const firebaseConfig = {
-      apiKey: "AIzaSyBdPUSGZGX6Yp5qTFxAZFOGSj8cCFPsros",
-      authDomain: "geoguessr-free-fire-edition.firebaseapp.com",
-      databaseURL: "https://geoguessr-free-fire-edition-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "geoguessr-free-fire-edition",
-      storageBucket: "geoguessr-free-fire-edition.firebasestorage.app",
-      messagingSenderId: "387268765614",
-      appId: "1:387268765614:web:66863a2027a8041144ca3f",
-      measurementId: "G-9ZPZYQ76D2"
+      apiKey: import.meta.env.VITE_FIREBASE_API_KEY,
+      authDomain: import.meta.env.VITE_FIREBASE_AUTH_DOMAIN,
+      databaseURL: import.meta.env.VITE_FIREBASE_DATABASE_URL,
+      projectId: import.meta.env.VITE_FIREBASE_PROJECT_ID,
+      storageBucket: import.meta.env.VITE_FIREBASE_STORAGE_BUCKET,
+      messagingSenderId: import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID,
+      appId: import.meta.env.VITE_FIREBASE_APP_ID,
+      measurementId: import.meta.env.VITE_FIREBASE_MEASUREMENT_ID,
     };
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
